# bazel-central-registry

tools/: migrate_to_bzlmod.py
tools/bzlmod_migration_test_examples/docs/: BUILD  MODULE.bazel  WORKSPACE  extension_for_macro_module_extension.bzl  extension_for_my_custom_macro.bzl  extension_for_test_repo_rule.bzl  go.mod  go.sum  macro_module_extension.bzl  migration_info.md  query_direct_deps  resolved_deps.py  test_repo_rule.bzl
tools/bzlmod_migration_test_examples/maven_extensions/: migration_test.py
tools/bzlmod_migration_test_examples/simple_module_deps/: BUILD  query_direct_deps  resolved_deps.py
