module(
    name = "main",
    version = "",
)

bazel_dep(name = "rules_java", version = "8.15.2")
bazel_dep(name = "gazelle", version = "0.45.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_go", version = "0.57.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_python", version = "1.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_shell", version = "0.6.1")
# -- bazel_dep definitions -- #

# -- use_repo_rule statements -- #

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "my_python_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "my_python_deps")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.11")
python.toolchain(python_version = "3.11")
# -- End of pip extensions -- #

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")

go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "org_golang_x_net")

go_sdk.from_file(go_mod = "//:go.mod")

go_deps.gazelle_override(
    path = "golang.org/x/net",
    directives = [
        "gazelle:proto disable",
         "gazelle:go_naming_convention import",
    ],
)

# -- End of go extension -- #


maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

use_repo(maven, "px_deps")

maven.artifact(
    name = "px_deps",
    group = "org.antlr",
    artifact = "antlr4",
    version = "4.11.1"
)
# -- End of maven artifacts for repo `px_deps` -- #
# -- End of maven extensions -- #

# -- repo definitions -- #
